--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="row">
                 <div class="col-lg-5 mb-5">
                     <div class="hero-img position-relative ps-5">
-                        <img class="w-100" src="/imgs/hero.jpg" alt="Hero img">
+                        <img class="w-100" src="./imgs/hero.jpg" alt="Hero img">
                     </div>
                 </div>
                 <div class="col-lg-7">
@@ -184,7 +184,7 @@
                         <div class="row">
                             <div class="col-lg-4 col-md-6 mb-4">
                                 <div class="portfolio-img position-relative">
-                                    <img class="w-100" src="/imgs/portfolio/1.jpg" alt="">
+                                    <img class="w-100" src="./imgs/portfolio/1.jpg" alt="">
                                     <div class="portfolio-img-overlay">
                                         <div class="overlay-info text-center d-flex flex-column">
                                             <h6>WEB DESIGN</h6>
@@ -198,7 +198,7 @@
                             </div>
                             <div class="col-lg-4 col-md-6 mb-4">
                                 <div class="portfolio-img position-relative">
-                                    <img class="w-100" src="/imgs/portfolio/2.jpg" alt="">
+                                    <img class="w-100" src="./imgs/portfolio/2.jpg" alt="">
                                     <div class="portfolio-img-overlay">
                                         <div class="overlay-info text-center d-flex flex-column">
                                             <h6>WEB DESIGN</h6>
@@ -212,7 +212,7 @@
                             </div>
                             <div class="col-lg-4 col-md-6 mb-4">
                                 <div class="portfolio-img position-relative">
-                                    <img class="w-100" src="/imgs/portfolio/3.jpg" alt="">
+                                    <img class="w-100" src="./imgs/portfolio/3.jpg" alt="">
                                     <div class="portfolio-img-overlay">
                                         <div class="overlay-info text-center d-flex flex-column">
                                             <h6>WEB DESIGN</h6>
@@ -226,7 +226,7 @@
                             </div>
                             <div class="col-lg-4 col-md-6 mb-4">
                                 <div class="portfolio-img position-relative">
-                                    <img class="w-100" src="/imgs/portfolio/4.jpg" alt="">
+                                    <img class="w-100" src="./imgs/portfolio/4.jpg" alt="">
                                     <div class="portfolio-img-overlay">
                                         <div class="overlay-info text-center d-flex flex-column">
                                             <h6>WEB DESIGN</h6>
@@ -240,7 +240,7 @@
                             </div>
                             <div class="col-lg-4 col-md-6 mb-4">
                                 <div class="portfolio-img position-relative">
-                                    <img class="w-100" src="/imgs/portfolio/5.jpg" alt="">
+                                    <img class="w-100" src="./imgs/portfolio/5.jpg" alt="">
                                     <div class="portfolio-img-overlay">
                                         <div class="overlay-info text-center d-flex flex-column">
                                             <h6>WEB DESIGN</h6>
@@ -254,7 +254,7 @@
                             </div>
                             <div class="col-lg-4 col-md-6 mb-4">
                                 <div class="portfolio-img position-relative">
-                                    <img class="w-100" src="/imgs/portfolio/6.jpg" alt="">
+                                    <img class="w-100" src="./imgs/portfolio/6.jpg" alt="">
                                     <div class="portfolio-img-overlay">
                                         <div class="overlay-info text-center d-flex flex-column">
                                             <h6>WEB DESIGN</h6>
@@ -272,7 +272,7 @@
                         <div class="row">
                             <div class="col-lg-4 col-md-6 mb-4">
                                 <div class="portfolio-img position-relative">
-                                    <img class="w-100" src="/imgs/portfolio/4.jpg" alt="">
+                                    <img class="w-100" src="./imgs/portfolio/4.jpg" alt="">
                                     <div class="portfolio-img-overlay">
                                         <div class="overlay-info text-center d-flex flex-column">
                                             <h6>WEB DESIGN</h6>
@@ -286,7 +286,7 @@
                             </div>
                             <div class="col-lg-4 col-md-6 mb-4">
                                 <div class="portfolio-img position-relative">
-                                    <img class="w-100" src="/imgs/portfolio/6.jpg" alt="">
+                                    <img class="w-100" src="./imgs/portfolio/6.jpg" alt="">
                                     <div class="portfolio-img-overlay">
                                         <div class="overlay-info text-center d-flex flex-column">
                                             <h6>WEB DESIGN</h6>
@@ -304,7 +304,7 @@
                         <div class="row">
                             <div class="col-lg-4 col-md-6 mb-4">
                                 <div class="portfolio-img position-relative">
-                                    <img class="w-100" src="/imgs/portfolio/2.jpg" alt="">
+                                    <img class="w-100" src="./imgs/portfolio/2.jpg" alt="">
                                     <div class="portfolio-img-overlay">
                                         <div class="overlay-info text-center d-flex flex-column">
                                             <h6>WEB DESIGN</h6>
@@ -318,7 +318,7 @@
                             </div>
                             <div class="col-lg-4 col-md-6 mb-4">
                                 <div class="portfolio-img position-relative">
-                                    <img class="w-100" src="/imgs/portfolio/5.jpg" alt="">
+                                    <img class="w-100" src="./imgs/portfolio/5.jpg" alt="">
                                     <div class="portfolio-img-overlay">
                                         <div class="overlay-info text-center d-flex flex-column">
                                             <h6>WEB DESIGN</h6>
@@ -336,7 +336,7 @@
                         <div class="row">
                             <div class="col-lg-4 col-md-6 mb-4">
                                 <div class="portfolio-img position-relative">
-                                    <img class="w-100" src="/imgs/portfolio/1.jpg" alt="">
+                                    <img class="w-100" src="./imgs/portfolio/1.jpg" alt="">
                                     <div class="portfolio-img-overlay">
                                         <div class="overlay-info text-center d-flex flex-column">
                                             <h6>WEB DESIGN</h6>
@@ -350,7 +350,7 @@
                             </div>
                             <div class="col-lg-4 col-md-6 mb-4">
                                 <div class="portfolio-img position-relative">
-                                    <img class="w-100" src="/imgs/portfolio/3.jpg" alt="">
+                                    <img class="w-100" src="./imgs/portfolio/3.jpg" alt="">
                                     <div class="portfolio-img-overlay">
                                         <div class="overlay-info text-center d-flex flex-column">
                                             <h6>WEB DESIGN</h6>
@@ -364,7 +364,7 @@
                             </div>
                             <div class="col-lg-4 col-md-6 mb-4">
                                 <div class="portfolio-img position-relative">
-                                    <img class="w-100" src="/imgs/portfolio/5.jpg" alt="">
+                                    <img class="w-100" src="./imgs/portfolio/5.jpg" alt="">
                                     <div class="portfolio-img-overlay">
                                         <div class="overlay-info text-center d-flex flex-column">
                                             <h6>WEB DESIGN</h6>
@@ -393,7 +393,7 @@
                     <div class="carousel-inner">
                       <div class="carousel-item active">
                         <div class="author-img m-auto mb-3">
-                            <img class="w-100 rounded-circle" src="/imgs/1_New1.jpg" alt="">
+                            <img class="w-100 rounded-circle" src="./imgs/1_New1.jpg" alt="">
                         </div>
                         <p class="text-center text-color">Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum rem commodi veniam dolore voluptate tempore at sapiente ipsum. Tempore doloribus asperiores sapiente, ad repellendus adipisci?</p>
                         <h6 class="mt-4 text-center">Alex Smith</h6>
@@ -401,7 +401,7 @@
                       </div>
                       <div class="carousel-item">
                         <div class="author-img m-auto mb-3">
-                            <img class="w-100 rounded-circle" src="/imgs/1_New1.jpg" alt="">
+                            <img class="w-100 rounded-circle" src="./imgs/1_New1.jpg" alt="">
                         </div>
                         <p class="text-center text-color">Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum rem commodi veniam dolore voluptate tempore at sapiente ipsum. Tempore doloribus asperiores sapiente, ad repellendus adipisci?</p>
                         <h6 class="mt-4 text-center">Alex Smith</h6>
@@ -409,7 +409,7 @@
                       </div>
                       <div class="carousel-item">
                         <div class="author-img m-auto mb-3">
-                            <img class="w-100 rounded-circle" src="/imgs/1_New1.jpg" alt="">
+                            <img class="w-100 rounded-circle" src="./imgs/1_New1.jpg" alt="">
                         </div>
                         <p class="text-center text-color">Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum rem commodi veniam dolore voluptate tempore at sapiente ipsum. Tempore doloribus asperiores sapiente, ad repellendus adipisci?</p>
                         <h6 class="mt-4 text-center">Alex Smith</h6>
@@ -478,7 +478,7 @@
                 <div class="col-lg-4 col-md-6 col-xs-12">
                     <div class="team-card mb-3">
                         <div class="team-img position-relative overflow-hidden">
-                            <img class="w-100" src="/imgs/1.jpg" alt="">
+                            <img class="w-100" src="./imgs/1.jpg" alt="">
                             <div class="team-social">
                                 <div class="team-icon">
                                     <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
@@ -497,7 +497,7 @@
                 <div class="col-lg-4 col-md-6 col-xs-12">
                     <div class="team-card mb-3">
                         <div class="team-img position-relative overflow-hidden">
-                            <img class="w-100" src="/imgs/1.jpg" alt="">
+                            <img class="w-100" src="./imgs/1.jpg" alt="">
                             <div class="team-social">
                                 <div class="team-icon">
                                     <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
@@ -516,7 +516,7 @@
                 <div class="col-lg-4 col-md-6 col-xs-12">
                     <div class="team-card mb-3">
                         <div class="team-img position-relative overflow-hidden">
-                            <img class="w-100" src="/imgs/1.jpg" alt="">
+                            <img class="w-100" src="./imgs/1.jpg" alt="">
                             <div class="team-social">
                                 <div class="team-icon">
                                     <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
